# broskills

./: .gitignore  README.md  dev.ipynb  pyproject.toml
examples/: basic_usage.py
skills/evaluation/: eval.py  tokenizer.py
skills/generate-meta-prompt/: SKILL.md
src/broskills/: __init__.py
src/broskills/core/: __init__.py  registry.py  skill_executor.py  skill_loader.py
src/broskills/tools/: __init__.py  base.py  file_manager.py
src/broskills/utils/: __init__.py  parsers.py
tests/: README.md  test_broskills.py  test_tokenizer.py
